# BodyPartExtractor

./: CMakeLists.txt  README.md  bodypartextractor.cpp  bodypartextractor.hpp  custom_flags.hpp
